# redix

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md
docs/: architecture.md  protocol.md  storage.md
src/core/: command_executor.cpp  command_executor.hpp  request_handler.cpp  request_handler.hpp
src/parser/: command.hpp  parser.cpp  parser.hpp
src/storage/: key_value_store.cpp  key_value_store.hpp
tests/: command_executor_tests.cpp  parser_tests.cpp  request_handler_tests.cpp  storage_tests.cpp
